crates/shinier_rb_formatter/tests/snapshots/snapshot_test__run@node__instance_variable_target_node.rb.snap
---
source: crates/shinier_rb_formatter/tests/snapshot_test.rs
assertion_line: 509
expression: output
input_file: crates/shinier_rb_formatter/tests/ruby/node/instance_variable_target_node.rb
---
****FORMATTED****
@foo, @bar = baz

****AST****
ProgramNode: "@foo, @bar = baz"
__MultiWriteNode: "@foo, @bar = baz"
____InstanceVariableTargetNode: "@foo"
____InstanceVariableTargetNode: "@bar"
____CallNode: "baz"
