crates/shinier_rb_formatter/tests/snapshots/snapshot_test__run@node__integer_node.rb.snap
---
source: crates/shinier_rb_formatter/tests/snapshot_test.rs
assertion_line: 509
expression: output
input_file: crates/shinier_rb_formatter/tests/ruby/node/integer_node.rb
---
****FORMATTED****
1
0b1
0o1
0d1
0x1

****AST****
ProgramNode: "1\n\n0b1\n0o1\n0d1\n0x1"
__IntegerNode: "1"
__IntegerNode: "0b1"
__IntegerNode: "0o1"
__IntegerNode: "0d1"
__IntegerNode: "0x1"
