crates/shinier_rb_formatter/tests/snapshots/snapshot_test__run@node__interpolated_string_node.rb.snap
---
source: crates/shinier_rb_formatter/tests/snapshot_test.rs
assertion_line: 509
expression: output
input_file: crates/shinier_rb_formatter/tests/ruby/node/interpolated_string_node.rb
---
****FORMATTED****
"foo #{bar} baz"

****AST****
ProgramNode: "\"foo #{bar} baz\""
__InterpolatedStringNode: "\"foo #{bar} baz\""
____StringNode: "foo "
____EmbeddedStatementsNode: "#{bar}"
______CallNode: "bar"
____StringNode: " baz"
