crates/shinier_rb_formatter/tests/snapshots/snapshot_test__run@node__interpolated_x_string_node.rb.snap
---
source: crates/shinier_rb_formatter/tests/snapshot_test.rs
assertion_line: 9
expression: output
input_file: crates/shinier_rb_formatter/tests/ruby/node/interpolated_x_string_node.rb
---
`foo #{bar} baz`
