crates/shinier_rb_formatter/tests/snapshots/snapshot_test__run@node__it_parameters_node.rb.snap
---
source: crates/shinier_rb_formatter/tests/snapshot_test.rs
assertion_line: 509
expression: output
input_file: crates/shinier_rb_formatter/tests/ruby/node/it_parameters_node.rb
---
****FORMATTED****
-> { it.+(it) }

****AST****
ProgramNode: "-> { it + it }"
__LambdaNode: "-> { it + it }"
____ItParametersNode: "-> { it + it }"
____StatementsNode: "it + it"
______CallNode: "it + it"
________ItLocalVariableReadNode: "it"
________ItLocalVariableReadNode: "it"
