crates/shinier_rb_formatter/tests/snapshots/snapshot_test__run@node__keyword_hash_node.rb.snap
---
source: crates/shinier_rb_formatter/tests/snapshot_test.rs
assertion_line: 509
expression: output
input_file: crates/shinier_rb_formatter/tests/ruby/node/keyword_hash_node.rb
---
****FORMATTED****
foo(a: b)

****AST****
ProgramNode: "foo(a: b)"
__CallNode: "foo(a: b)"
____KeywordHashNode: "a: b"
______AssocNode: "a: b"
________SymbolNode: "a:"
________CallNode: "b"
